upto navbar search bar in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,29 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navigation-bar></app-navigation-bar>
-<carousel>
-  <slide>
-    <img src="src/assets/images/carousel/carousel1.jpg" alt="first slide" style="display: block; width: 100%;">
+<carousel style="width: 80%">
+  <slide >
+    <img src="src/assets/images/carousel/carousel1.jpg" alt="first slide" style="display: block; width: 100%; height:400px;position:relative; align-self: center">
     <div class="carousel-caption d-none d-md-block">
-      <h3>First slide label</h3>
+      <h3>Find the Best Stylist</h3>
       <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
     </div>
   </slide>
-  <slide>
-    <img src="http://gomighty.com/wp-content/themes/gomighty/lib/goal_images/files/SMusicPianoAntiqueshutterstock_-1920.jpg" alt="second slide" style="display: block; width: 80%; height: 40%;align-self: center">
+  <slide >
+    <img src="src/assets/images/carousel/carousel2.jpg" alt="second slide" style="display: block; width: 100%; height:400px; position: relative;align-self: auto;">
     <div class="carousel-caption d-none d-md-block">
-      <h3>Second slide label</h3>
+      <h3>The Best Workplace For HairStylists</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
   </slide>
   <slide>
-    <img src="assets/images/nature/1.jpg" alt="third slide" style="display: block; width: 100%;">
+    <img src="src/assets/images/carousel/carousel3.jpg" alt="third slide" style="display: block; width: 100%; height:400px; align-content: center ; position:  relative; align-self: auto;">
     <div class="carousel-caption d-none d-md-block">
-      <h3>Third slide label</h3>
+      <h3>Define the freedom of Freelancing</h3>
       <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
     </div>
   </slide>
 </carousel>
-  <!-- <h1>
-    Welcome to {{ title }}!
-  </h1> -->
-
+<app-search-bar>
+  
+</app-search-bar>
+<ng-select class="custom"></ng-select>
