--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,21 @@
 <app-navigation-bar></app-navigation-bar>
 <carousel style="width: 80%">
   <slide >
-    <img src="src/assets/images/carousel/carousel1.jpg" alt="first slide" style="display: block; width: 100%; height:400px;position:relative; align-self: center">
+    <img src="src/assets/images/carousel/carousel1.jpg" alt="first slide" style="display: block; margin-left: auto; margin-right: auto; width: 80%; height:400px;position:relative; align-self: center">
     <div class="carousel-caption d-none d-md-block">
       <h3>Find the Best Stylist</h3>
       <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
     </div>
   </slide>
   <slide >
-    <img src="src/assets/images/carousel/carousel2.jpg" alt="second slide" style="display: block; width: 100%; height:400px; position: relative;align-self: auto;">
+    <img src="src/assets/images/carousel/carousel2.jpg" alt="second slide" style="display: block;margin-left: auto; margin-right: auto; width: 80%; height:400px; position: relative;align-self: auto;">
     <div class="carousel-caption d-none d-md-block">
       <h3>The Best Workplace For HairStylists</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
   </slide>
   <slide>
-    <img src="src/assets/images/carousel/carousel3.jpg" alt="third slide" style="display: block; width: 100%; height:400px; align-content: center ; position:  relative; align-self: auto;">
+    <img src="src/assets/images/carousel/carousel3.jpg" alt="third slide" style="display: block;margin-left: auto; margin-right: auto; width: 80%; height:400px; align-content: center ; position:  relative; align-self: auto;">
     <div class="carousel-caption d-none d-md-block">
       <h3>Define the freedom of Freelancing</h3>
       <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -26,4 +26,4 @@
 <app-search-bar>
   
 </app-search-bar>
-<ng-select class="custom"></ng-select>
+
