--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="search-bar">
   <div class="selector">
-    <input type="text">
+    <ng-select class="custom" style="width: 20%"></ng-select>
   </div>
 </div>
