upto navbar and search bar- few alignment to be done

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,24 @@
 <div class="search-bar">
-  <div class="selector">
-    <ng-select class="custom" style="width: 20%"></ng-select>
-  </div>
+  <ul>
+    <li>
+      <div class="selector">
+        <ng-select class="custom" style="width: 150px"></ng-select>
+      </div>
+    </li>
+    <li>  
+      <div class="selector">
+        <ng-select class="custom" style="width: 150px" ></ng-select>
+      </div>
+    </li>
+    <li>
+      <div class="selector">
+        <ng-select class="custom" style="width: 150px"></ng-select>
+      </div>
+    </li>
+    <li>
+        
+    </li>  
+  </ul>
+  
 </div>
+<hr>
