--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -2,10 +2,12 @@
     position: relative;
     top: 0px;
     width: 100%;
-    background-color: #9CCDFF;
+    background-color: #008EFF;
     color: #000066;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 2rem;
+    font-style: bold;
+    display: block; margin-left: auto; margin-right: auto; width: 100%;position:relative; align-self: auto
 }
 .logo{
     position: relative;
@@ -13,5 +15,8 @@
     padding: 0px;
     text-align: left;
     padding-left: 10px;
+    font-size:45px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: block;  margin-right: auto; width: 50%;position:relative; align-self: auto
 }
+
