--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -4,5 +4,15 @@
     margin-top: 5px;
     background-color: #008EFF;
     padding-top: 7px; 
-    border-radius: 5px;  
+    border-radius: 5px; 
+    padding-left: 5%; 
 }
+li{
+    list-style-type: none;
+    float: left;
+    margin-right: 5%;
+    margin-left: 10%
+   
+}
+
+
