data sent to frontend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navigation-bar></app-navigation-bar>
+<!-- <app-navigation-bar></app-navigation-bar>
 <carousel style="width: 80%">
   <slide >
     <img src="src/assets/images/carousel/carousel1.jpg" alt="first slide" style="display: block; margin-left: auto; margin-right: auto; width: 50%;position:relative; align-self: auto">
@@ -22,8 +22,8 @@
       <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
     </div>
   </slide>
-</carousel>
-<app-search-bar>
-  
-</app-search-bar>
+</carousel> -->
+<router-outlet>
 
+</router-outlet>
+<!-- <app-search-bar></app-search-bar> -->
