--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,24 +1,37 @@
 <div class="search-bar">
   <ul>
-    <li>
-      <div class="selector">
-        <ng-select class="custom" style="width: 150px"></ng-select>
-      </div>
-    </li>
     <li>  
       <div class="selector">
-        <ng-select class="custom" style="width: 150px" ></ng-select>
+        <ng-select class="custom" style="width: 150px"  [items]="proffesion"
+          bindLabel="ProffesionName"
+          placeholder="Select proffesion"
+          [(ngModel)]="selectedProffesion"> </ng-select>
       </div>
     </li>
     <li>
       <div class="selector">
-        <ng-select class="custom" style="width: 150px"></ng-select>
+        <ng-select class="custom" style="width: 150px"  [items]="cities"
+          bindLabel="name"
+          placeholder="Select city"
+          [(ngModel)]="selectedCity"> 
+        </ng-select>
       </div>
     </li>
     <li>
-        
+      <form class="form-inline">
+        <div class="form-group">
+          <div class="input-group">
+            <input class="form-control" placeholder="yyyy-mm-dd"
+                   name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+            </div>
+          </div>
+        </div>
+      </form>
     </li>  
   </ul>
-
+  <hr/>
+  <pre>Model: {{ model | json }}</pre>
 </div>
-<hr>
+
