--- a/src/app/new-search/new-search.component.html
+++ b/src/app/new-search/new-search.component.html
@@ -4,7 +4,7 @@
     <li>  
       <div class="selector">
         <ng-select class="custom" style="width: 150px"  [items]="proffesion"
-          bindLabel="ProffesionName"
+          bindLabel="name"
           placeholder="Select proffesion"
           [(ngModel)]="selectedProffesion"
           name= "proffesion.ProffesionID"> </ng-select>
@@ -34,10 +34,9 @@
     </li>
     <li>
       
-        <button (click)="searchResult()">search
+        <button (click)="searchStylist()">search
         </button>
       
     </li>
   </ul>
 </div>
-
