--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,43 +1,49 @@
 <div class="search-bar">
-  
-  <ul>
-    <li>  
-      <div class="selector">
-        <ng-select class="custom" style="width: 150px"  [items]="proffesion"
-          bindLabel="ProffesionName"
-          placeholder="Select proffesion"
-          [(ngModel)]="selectedProffesion"
-          name= "proffesion.ProffesionID"> </ng-select>
-      </div>
-    </li>
-    <li>
-      <div class="selector">
-        <ng-select class="custom" style="width: 150px"  [items]="cities"
-          bindLabel="name"
-          placeholder="Select city"
-          [(ngModel)]="selectedCity"> 
-        </ng-select>
-      </div>
-    </li>
-    <li>
-      <form class="form-inline">
-        <div class="form-group">
-          <div class="input-group">
-            <input class="form-control" placeholder="yyyy-mm-dd"
-                   name="dp" [(ngModel)]="selectedDate" ngbDatepicker #d="ngbDatepicker">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
-            </div>
-          </div>
+  <div >
+    <ul>
+      <li>  
+        <div class="selector">
+          <ng-select class="form-control"  style="width: 150px"  [items]="proffesion"
+            bindLabel="name"
+            placeholder="Select proffesion"
+            [(ngModel)]="selectedProffesion"
+           > </ng-select>
         </div>
-      </form>
-    </li>
-    <li>
-      
-        <button (click)="searchResult()">search
-        </button>
-      
-    </li>
-  </ul>
+      </li>
+      <li>
+        <div class="selector">
+          <ng-select class="form-control"  style="width: 150px"  [items]="cities"
+            bindLabel="name"
+            placeholder="Select city"
+            [(ngModel)]="selectedCity"
+            > 
+          </ng-select>
+        </div>
+      </li>
+      <li>
+        <form class="form-inline">
+          <!-- <div class="form-group"> -->
+            <div class="input-group">
+              <input class="form-control" placeholder="yyyy-mm-dd"
+                    name="dp"  ngbDatepicker #d="ngbDatepicker"  [(ngModel)]="selectedDate">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+              </div>
+            </div>
+          <!-- </div> -->
+        </form>
+      </li>
+      <li>
+        
+          <button (click)="getPrimarySearch(selectedProffesion.id,selectedCity.name,selectedDate)">search
+          </button>
+        
+      </li>
+    </ul>
+  </div>
 </div>
 
+
+[(ngModel)]="selectedProffesion"
+
+[(ngModel)]="selectedDate"
